# matrix-chimera-appservice

./: Cargo.toml  README.md
src/: configuration.rs  main.rs  matrix.rs  request.rs  service.rs
